--- a/css/style.css
+++ b/css/style.css
@@ -87,23 +87,23 @@ img{max-width: 100%;}
 .w-80{width: 80%;}
 .w-70{width: 70%;}
 .w-60{width: 60%;}
+.w-50{width: 50%}
 .w-40{width: 40%;}
 
+.gap-04rem{gap: 0.4rem;}
 .gap-1rem{gap: 1rem;}
 .gap-2rem{gap: 2rem;}
 .gap-3rem{gap: 3rem;}
 
-.margin-top-test{
-    margin-top: 2rem;
-}
-
+.margin-top-2rem{margin-top: 2rem;}
+.margin-top-3rem{margin-top: 3rem;}
+.margin-top-4rem{margin-top: 4rem;}
+.margin-top-6rem{margin-top: 6rem;}
 .padding-09lr-08ud{
     padding: 0.9rem 0.8rem;
 }
-
-
-
-
+.padding-main-intro{ padding: 5% 20% 0% 20%;}
+.padding-main{padding: 0% 15% 0 15%;}
 
 .button{
     background-color: var(--blue-strong);
@@ -115,11 +115,8 @@ img{max-width: 100%;}
     opacity: 0.7;
 }
 
-
-.margin-top-2rem{margin-top: 2rem;}
-
 #app_main{
-    .padding-main-intro{ padding: 5% 20% 0% 20%;}
+    
     .h1_intro{
         font-size: 4rem;
         line-height: 5.2rem;
@@ -130,4 +127,17 @@ img{max-width: 100%;}
         margin: 0rem -0.0rem -4rem 0rem;
     }
     .arrow_intro{font-size: 3rem;}
+    /* //finish intro */
+    .radiobutton{border:2px solid var(--blue-strong)}
+
+    input[type="radio"].radiobutton{
+        appearance: none;
+        width: 1rem;
+        height: 1rem;
+        border: 0.28rem solid var(--blue-strong);
+        border-radius: 50%;
+        background-color: var(--white);
+    }
+    .h1_big{font-size: 2.3rem;}
+
 }
