--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 :root{
     --white: #ffffff;
     --black: #000;
+    --gray: #d0d0d3;
     --blue-strong: #0061ff;
     --azure: #b4d0e7;
     --green_img: #a2d39b;
@@ -31,44 +32,30 @@ body{
 
 img{max-width: 100%;}
 
-.font-size{
-    font-size: 13px;
-}
+.font-size{font-size: 13px;}
 
-.d-flex{
-    display: flex;
-}
-.flex-align-center{
-    align-items: center;
-}
-.flex-justify-center{
-    justify-content: center;
-}
+.border-light{border: 1px solid var(--gray_img)}
+
+.display-inline{display: inline-block;}
+.d-flex{display: flex;}
+.flex-align-center{align-items: center;}
+.flex-justify-center{justify-content: center;}
 .flex-center-center{
     align-items: center;
     justify-content: center;
 }
-.flex-column{
-    flex-direction: column;
-}
-.flex-row{
-    flex-direction: row;
-}
-.flex-justify-start{
-    justify-content: start;
-}
-.flex-justify-end{
-    justify-content: end;
-}
-.flex-justify-between{
-    justify-content: space-between;
-}
-.flex-justify-around{
-    justify-content: space-around;
-}
+.flex-column{flex-direction: column;}
+.flex-row{flex-direction: row;}
+.flex-justify-start{justify-content: start;}
+.flex-justify-end{justify-content: end;}
+.flex-justify-between{justify-content: space-between;}
+.flex-justify-around{justify-content: space-around;}
+.flex-wrap{flex-wrap: wrap;}
 
 .bg-azure{background-color: var(--azure);}
 .bg-black{background-color: var(--black);}
+.color-blue{color: var(--blue-strong);}
+
 
 .col-1{width: calc((100%/12)*1);}
 .col-2{width: calc((100%/12)*2);}
@@ -90,6 +77,7 @@ img{max-width: 100%;}
 .w-50{width: 50%}
 .w-40{width: 40%;}
 
+.gap-02rem{gap: 0.2rem;}
 .gap-04rem{gap: 0.4rem;}
 .gap-1rem{gap: 1rem;}
 .gap-2rem{gap: 2rem;}
@@ -99,11 +87,15 @@ img{max-width: 100%;}
 .margin-top-3rem{margin-top: 3rem;}
 .margin-top-4rem{margin-top: 4rem;}
 .margin-top-6rem{margin-top: 6rem;}
+.margin-test{margin: 0 -1rem;}
+.margin-bottom-3rem{margin-bottom: 3rem;}
+
 .padding-09lr-08ud{
     padding: 0.9rem 0.8rem;
 }
 .padding-main-intro{ padding: 5% 20% 0% 20%;}
 .padding-main{padding: 0% 15% 0 15%;}
+.padding-06remUD{padding: 0.6rem 0rem;}
 
 .button{
     background-color: var(--blue-strong);
@@ -111,9 +103,10 @@ img{max-width: 100%;}
     border-radius: 0rem;
     padding: 0.5rem 1rem;
 }
-.button:hover{
-    opacity: 0.7;
-}
+.button:hover{opacity: 0.7;}
+
+
+
 
 #app_main{
     
@@ -128,8 +121,12 @@ img{max-width: 100%;}
     }
     .arrow_intro{font-size: 3rem;}
     /* //finish intro */
+    #your_plain *{
+        font-size: 11px; 
+        .h1_card{color: var(--blue-strong); font-size: 1.04rem;}
+        .list_cards{list-style-type: none;}
+    }
     .radiobutton{border:2px solid var(--blue-strong)}
-
     input[type="radio"].radiobutton{
         appearance: none;
         width: 1rem;
@@ -139,5 +136,8 @@ img{max-width: 100%;}
         background-color: var(--white);
     }
     .h1_big{font-size: 2.3rem;}
+    [class^="col-"]{min-height: 300px; border: 1px solid var(--gray)}
+    .padding_card_down{padding: 13% 11%;}
+    
 
 }
