--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,15 @@ body{
 
 img{max-width: 100%;}
 
-.font-size{font-size: 13px;}
+.position-relative{position: relative;}
+.position-absolute{position: absolute;}
+.right-1_5{right: 1.5rem;}
+
+.font-size{font-size: 11.5px;}
 
 .border-light{border: 1px solid var(--gray_img)}
+
+.h-100{height: 100%;}
 
 .display-inline{display: inline-block;}
 .d-flex{display: flex;}
@@ -79,6 +85,7 @@ img{max-width: 100%;}
 
 .gap-02rem{gap: 0.2rem;}
 .gap-04rem{gap: 0.4rem;}
+.gap-07{gap: 0.7rem;}
 .gap-1rem{gap: 1rem;}
 .gap-2rem{gap: 2rem;}
 .gap-3rem{gap: 3rem;}
@@ -97,12 +104,16 @@ img{max-width: 100%;}
 .padding-main-intro{ padding: 5% 20% 0% 20%;}
 .padding-main{padding: 0% 15% 0 15%;}
 .py-06-ud{padding: 0.6rem 0rem;}
+.py-tb-1_7{padding: 1.7rem 0;}
+.py-l-1_5{padding: 0 0 0 1.5rem;}
 
 .py-tb-1{padding: 1rem 0rem 1rem 0rem;}
 .py-t-1{padding: 1rem 0 0 0;}
 .py-lr-1rem{padding: 0rem 1rem;}
+.py-b-2{padding: 0 0 2rem 0;}
 
 .border-1-blue{border: 1px solid var(--blue-strong);}
+.border-1-gray{border: 2px solid var(--gray);}
 
 .button{
     background-color: var(--blue-strong);
@@ -112,6 +123,12 @@ img{max-width: 100%;}
     padding: 0.5rem 1rem;
 }
 .button:hover{opacity: 0.7;}
+.button2{
+    color: var(--black);
+    background-color: var(--white);
+    border: 1px solid var(--black);
+    padding: 0.5rem 1rem;
+}
 
 #app_main{
     
@@ -126,7 +143,7 @@ img{max-width: 100%;}
     }
     .arrow_intro{font-size: 3rem;}
     /* //finish intro */
-    #your_plain *{
+    #your_plan *{
         font-size: 11.5px; 
         .h1_card{color: var(--blue-strong); font-size: 1.04rem;}
         .list_cards{list-style-type: none;}
@@ -143,9 +160,14 @@ img{max-width: 100%;}
         background-color: var(--white);
     }
     .h1_big{font-size: 2.3rem;}
-    [class^="col-"]{min-height: 300px; }
+    /* [class^="col-"]{min-height: 300px; } */
     .py_card_2sect{padding: 13% 11%;}  
     .hr_little{width: 20%;}
+    /* //finish cards */
+    .partner_dropbox{
+        padding: 1.7rem 1.2rem;
+    }
+
 
 
 }
