--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,9 @@
 .bg-img-azure{background-color: var(--blue3_img);}
 .bg-img-yellow{background-color: var(--yellow_img);}
 
-/* #debug *{
+#debug *{
     border: 1px dashed black;
-} */
+}
 
 body{
     font-family: "Noto Sans","Roboto", Arial, Helvetica, sans-serif;
@@ -46,6 +46,7 @@ img{max-width: 100%;}
 
 .position-relative{position: relative;}
 .position-absolute{position: absolute;}
+.right{right:0;}
 .right-1_5{right: 1.5rem;}
 
 .font-size{font-size: 11.5px;}
@@ -74,6 +75,7 @@ img{max-width: 100%;}
 .bg-black{background-color: var(--black);}
 .color-blue{color: var(--blue-strong);}
 .c-white{color: white}
+.c-brown{color: #61082b;}
 
 .col-1{width: calc((100%/12)*1);}
 .col-2{width: calc((100%/12)*2);}
@@ -120,6 +122,7 @@ img{max-width: 100%;}
 .padding-main{padding: 0% 15% 0 15%;}
 .py-06-ud{padding: 0.6rem 0rem;}
 .py-tb-1_7{padding: 1.7rem 0;}
+.py-tb-3{padding: 3rem 0;}
 .py-l-1_5{padding: 0 0 0 1.5rem;}
 
 .py-tb-1{padding: 1rem 0rem 1rem 0rem;}
@@ -146,6 +149,12 @@ img{max-width: 100%;}
     background-color: var(--white);
     border: 1px solid var(--black);
     padding: 0.5rem 1rem;
+}
+.button3{
+    color: var(--black);
+    background-color: var(--white);
+    padding: 0.5rem 1rem;
+
 }
 
 #app_main{
@@ -189,5 +198,7 @@ img{max-width: 100%;}
     .cube{aspect-ratio:1/1;}
     .cube img{width: 60% ;filter: invert(100%) sepia(100%) saturate(100%) hue-rotate(180deg);}
     .cube_img_center{width: 50%;}
+    /* //finish cards universities */
+    .dropbox_in_business{gap: 7rem;}
 }
 
